--- a/css/styles.css
+++ b/css/styles.css
@@ -11,14 +11,11 @@
     color: var(--title-color);
     display: block;
     margin: 8px;
-    width: 1600px;
 }
 
 .header {
     border: 1px solid #ececec;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
 }
 
 .footer {
@@ -31,20 +28,18 @@
     display: block;
 }
 
-.nav {
-    display: block;
-}
-
 .request-our-solution {
     background-color: #2f303a;
     width: 1600px;
     height: 600px;
     flex-shrink: 0;
-    display: ;
+    display: flex;
+    justify-content:center;
+    flex-direction: column;
     align-items: center;
 }
 
-.request-our-solution-h1 {
+.request-our-solution .request-our-solution-h1 {
     color: #FFF;
     text-align: center;
     font-family: Roboto;
@@ -54,9 +49,10 @@
     line-height: 60px; /* 136.364% */
     letter-spacing: 2.64px;
     text-transform: uppercase;
+    margin: 200px 452px 20px 452px;
 }
 
-.request-our-solution-button {
+.request-our-solution .request-our-solution-button {
     width: 200px;
     height: 50px;
     flex-shrink: 0;
@@ -71,6 +67,32 @@
     font-weight: 700;
     line-height: 30px; /* 187.5% */
     letter-spacing: 0.96px;
+    align-items: center;
+    padding: 10px 20px;
+    margin: 10px 700px 200px 700px;
+}
+
+.header .header-nav .header-links,
+.header .header-nav .header-contacts {
+    display: inline-flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.header-links {
+    margin-top: 10px;
+    margin-left: 100px;
+}
+
+.header-contacts {
+    margin-left: 400px;
+}
+
+.header-links :hover,
+.header-contacts :hover, 
+.header-links :focus,
+.header-contacts :focus {
+    color: var(--brand-color);
 }
 
 .logo {
@@ -80,6 +102,9 @@
     font-weight: 700;
     font-size: 26px;
     line-height: 1.18;
+    display: flex;
+    justify-content: flex-start;
+    margin-left: 215px;
 }
 
 .logo-color {
@@ -90,7 +115,7 @@
     color: var(--background-color);
 }
 .ul {
-    display: block;
+    display: flex;
     list-style-type: disc;
     margin-block-start: 1em;
     margin-block-end: 1em;
@@ -107,7 +132,7 @@
 .header-links, .link1, .link2, .header-contacts, .qualities-list, .team-list, .button-list, .project-list > ul {
     list-style: none;
     display: flex;
-    gap: 10px;
+    gap: 30px;
 }
 
 .link2 {
@@ -151,6 +176,7 @@ a:-webkit-any-link {
     display: flex;
     gap: 10px;
     justify-content: center;
+    margin: 90px 0 50px 0;
 }
 
 .button {
@@ -199,13 +225,15 @@ a:-webkit-any-link {
     display: grid;
     grid-template-columns: repeat(3,1fr);
     grid-gap: 20px;
+    margin: 0 12% 90px 12%;
 }
 
 .container {
     display: flex;
     justify-content: space-between;
-    margin: 0 150px 0 150px;
+    margin: 90px 150px 90px 150px;
 }
+
 .location {
     color: var(--background-color);
     line-height: 1.18px;
@@ -218,4 +246,6 @@ address {
 
 .footer-contacts {
     list-style: none;
+    margin-top: 50px;
+    margin-left: 215px;
 }
